fix(components): replaced missing margin

--- a/src/scss/components/_components.newsletter.scss
+++ b/src/scss/components/_components.newsletter.scss
@@ -15,6 +15,7 @@
 .NewsletterForm {
   display: flex;
   flex-direction: column;
+  @include margin-top(1);
 }
 
 .NewsletterForm-field {
